mobile letter spacing fixed for logo

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -167,6 +167,11 @@ aside a img, #social a, #arrow-anchor, #arrow-ancor {
     width: 200px;
     letter-spacing: -6px;
 }
+@media only screen and (max-width: 35em) {
+    #initial-wrap {
+	letter-spacing: -4px;
+    }
+}
 #initial-d {
     left: -140px;
 }
